[main]: correct extra horizontal scrolling

--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 #myslider {
-  width: 100vw;
-  height: 100vh; }
+  height: 100vh; 
+width: auto;}
 
 .slider {
   width: 100vw;
